# rules_go_cgo_rebuilds

./: .bazelrc  BUILD.bazel  MODULE.bazel  README.md  go.mod  sysroot.bzl
credential_helper/: helper.sh
go/: BUILD.bazel  main.go
